got importmap aliasing working

--- a/lib/prelude/jsconfig.json
+++ b/lib/prelude/jsconfig.json
@@ -3,11 +3,8 @@
   "compilerOptions": {
     "noEmit": true,
     "baseUrl": ".",
-    "allowJs": true,
     "paths": {
-      "@app/*": ["./*"],
-      "@base/*": ["../base/*"],
-      "@prelude-uni/*": ["../prelude/university/*"]
+      "@base/*": ["../base/*"]
     }
   },
   "include": ["**/*.js", "**/*.ts", "*.js", "*.ts"]
