cleaned up codegen

--- a/scripts/templates/doc.js.template
+++ b/scripts/templates/doc.js.template
@@ -1,16 +1,14 @@
 /**
- * @import { E, Widget } from '{{IMPORT_DEPTH}}prelude-type.ts';
+ * @import { E, Widget } from '@app/prelude-type.ts';
  * @import { Config, State } from './type.ts';
  */
 
-import * as prelude from '{{SECTION_IMPORT_DEPTH}}prelude.js';
-import { doc } from '{{IMPORT_DEPTH}}prelude.js';
+import { readmore, dashbox, todo, infobox, defineTerm, text } from '@prelude-uni/components.js';
+import { container, twoThree, twoColumns } from '@prelude-uni/layout.js';
+import { createDoc } from '@prelude-uni/util.js';
+import { doc } from '@app/prelude.js';
 import * as tables from './tables.js';
 import * as mathml from './mathml.js';
-
-const { readmore, dashbox, todo, infobox, defineTerm, text } = prelude.components;
-const { container, twoThree, twoColumns } = prelude.layout;
-const { createDoc } = prelude.util;
 
 export const intro = createDoc(() => container(
   doc.h1`[TITLE]`,
