--- a/scripts/templates/index.js.template
+++ b/scripts/templates/index.js.template
@@ -1,5 +1,5 @@
 /**
- * @import { Widget } from '{{IMPORT_DEPTH}}prelude-type.ts';
+ * @import { Widget } from '@app/prelude-type.ts';
  * @import { Config, State } from './type.ts';
  */
 
