--- a/scripts/templates/mathml.js.template
+++ b/scripts/templates/mathml.js.template
@@ -1,12 +1,11 @@
 /**
- * @import { E } from '{{IMPORT_DEPTH}}prelude-type.ts';
+ * @import { E } from '@app/prelude-type.ts';
  */
 
-import * as prelude from '{{SECTION_IMPORT_DEPTH}}prelude.js';
-import { mathml, doc } from '{{IMPORT_DEPTH}}prelude.js';
+import { mathml, doc } from '@app/prelude.js';
+import { parensB, SPECIAL, abs, annotationOver, rows, parensA, call, table, op } from '@prelude-uni/mathml.js';
 
 const { mi, mo, mtext, mrow, mn, msup, msub, msubsup, msqrt, munder, mspace, mfrac } = mathml;
-const { parensB, SPECIAL, abs, annotationOver, rows, parensA, call, table, op } = prelude.mathmlHelper;
 const { eqId, eq, add, minus, div, mul } = op;
 
 // Export your MathML formulas here
