--- a/scripts/templates/type.ts.template
+++ b/scripts/templates/type.ts.template
@@ -1,4 +1,4 @@
-import { RenderContextInit } from '{{IMPORT_DEPTH}}prelude-type.ts';
+import { RenderContextInit } from '@app/prelude-type.ts';
 
 export type RenderContext = RenderContextInit & {
 };
