--- a/scripts/templates/util.js.template
+++ b/scripts/templates/util.js.template
@@ -1,5 +1,5 @@
 /**
- * @import { MakeConfigKnobs } from '{{IMPORT_DEPTH}}prelude-type.ts';
+ * @import { MakeConfigKnobs } from '@app/prelude-type.ts';
  * @import { Config, State, Event } from './type.ts';
  */
 
