--- a/lib/ui/tsconfig.json
+++ b/lib/ui/tsconfig.json
@@ -8,7 +8,8 @@
     "outDir": "../../out/tsc/lib/ui",
     "baseUrl": ".",
     "paths": {
-      "@base/*": ["../base/*"]
+      "@base/*": ["../base/*"],
+      "@ui/*": ["./*"]
     }
   },
   "include": ["**/*.js", "**/*.ts", "*.js", "*.ts"],
