--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     { "path": "./lib/prelude" },
     { "path": "./lib/base" },
     { "path": "./lib/ui" },
+    { "path": "./lib/embed" },
     { "path": "./tsconfig.entry.json" }
   ]
 }
