adding cobb douglas embed

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": true,
     "strict": true,
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": ["./node_modules/@webgpu/types", "./node_modules/@types"],
     "moduleDetection": "force",
     "skipLibCheck": true
   }
