--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript/lib-dom": "^npm:@types/web@0.0.248",
     "@vitest/ui": "^3.2.4",
     "@web/test-runner": "^0.20.2",
+    "@webgpu/types": "^0.1.66",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "mocha": "^11.7.0",
