--- a/lib/remote/tsconfig.json
+++ b/lib/remote/tsconfig.json
@@ -1,18 +1,18 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
-    "outDir": "../../../out/tsc/lib/embed/sec-2102",
+    "outDir": "../../out/tsc/lib/remote",
     "baseUrl": "."
   },
   "exclude": [
-    "cobb-douglas"
+    "app-embed"
   ],
   "include": ["**/*.js", "**/*.ts", "*.js", "*.ts"],
   "references": [
-    { "path": "./cobb-douglas" }
+    { "path": "./app-embed" }
   ]
 }
