--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.6.1",
     "@typescript/lib-dom": "^npm:@types/web@0.0.248",
-    "@vitest/ui": "^3.2.4",
+    "@vitest/ui": "^4.0.16",
     "@web/test-runner": "^0.20.2",
     "@webgpu/types": "^0.1.66",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.2",
     "jsdom": "^26.1.0",
     "mocha": "^11.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.0",
-    "vitest": "^3.2.4"
-  },
-  "dependencies": {
-    "jest-environment-jsdom": "^30.0.2"
+    "vite": "^7.3.0",
+    "vitest": "^4.0.16"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
