--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@jest/globals": "^29.7.0",
+    "@swc/core": "^1.15.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.6.1",
     "@typescript/lib-dom": "^npm:@types/web@0.0.248",
     "@vitest/ui": "^4.0.16",
     "@web/test-runner": "^0.20.2",
     "@webgpu/types": "^0.1.66",
+    "esbuild": "^0.27.2",
+    "fast-glob": "^3.3.3",
+    "htmlparser2": "^10.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.2",
     "jsdom": "^26.1.0",
