--- a/lib/ui/tsconfig.json
+++ b/lib/ui/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "../../out/tsc/lib/ui",
     "baseUrl": ".",
     "paths": {
+      "@app/*": ["../*"],
       "@base/*": ["../base/*"],
       "@ui/*": ["./*"]
     }
