--- a/tsconfig.entry.json
+++ b/tsconfig.entry.json
@@ -26,6 +26,7 @@
   "references": [
     { "path": "./lib/base" },
     { "path": "./lib/ui" },
-    { "path": "./lib/cli/build" }
+    { "path": "./lib/cli/build" },
+    { "path": "./lib/cli/bundle" }
   ]
 }
