--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     { "path": "./lib/ui" },
     { "path": "./lib/remote" },
     { "path": "./lib/cli/build" },
+    { "path": "./lib/cli/bundle" },
     { "path": "./tsconfig.entry.json" }
   ]
 }
